--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body >
     <link rel="stylesheet" href="css2.css">
+  
     <center><h1>Communism</h1>
         
     <p onclick="ShowAndHide()">What is communism?</p>
