--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
         }
         </script>
       <p style="padding: 10px; display:none; border: 20px solid rgb(4, 2, 31);" id="p2">Karl marx</p>
+      <a href="https://rokie1.github.io/index2.html">Timeline</a>
     
     
