--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,7 @@
 }
 
 body {
-  font: normal 16px/1.5 "Ubuntu";
+  font: normal 16px/1.5 "Calibri";
   
   background: #032541;
   color: #000000;
@@ -296,7 +296,7 @@ time {
   <section class="intro">
     
   <div class="container">
-    <h1 style="font-size: 80px; font: Ubuntu;">Communism Timeline </h1>
+    <h1 style="font-size: 80px; font: Calibri;">Communism Timeline </h1>
     
   </div>
   
