--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
       <p style="padding: 10px; display:none; border: 20px solid rgb(4, 2, 31);" id="p2">Modern communism is based on the theory of Marxism, which was conceived by Karl Marx in the 19th Century</p>
       <img src="KarlMarx.jpeg" id="img1" style="display:none"></img>
       <a href="https://rokie1.github.io/Timeline1.html">TimelineCommunism</a>
-      <p class="p1"><a href="https://rokie1.github.io/Timeline2.html">TimelineCuba</a></p>
+      <p class="p1"><a href="/timeline2.html">TimelineCuba</a></p>
     
     
